@@ -1,3 +1,6 @@
+2007-02-06  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/clock.c (timesub): The result must always be positive.
+
 2007-02-05  Jean-Louis Martineau <martineau@zmanda.com>
 	* changer-src/chg-zd-mtx.sh.in: Fix for sed and IMPORT/EXPORT.
 
